--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
     </nav>
     <div class="container">
         <h1>おはよう</h1>
-        <img src="images/contact-image.jpg" alt="Contact Image" style="max-width: 100%; height: auto;">
+        <img src="contact-image.jpg" alt="Contact Image" style="max-width: 100%; height: auto;">
     </div>
 </body>
 </html>ㅇ
