--- a/index.html
+++ b/index.html
@@ -44,6 +44,6 @@
         </div>
     </div>
     <div id="toast" class="toast">계산이 완료되었습니다</div>
-    <script src="/app.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
