--- a/scientific.html
+++ b/scientific.html
@@ -50,6 +50,6 @@
         </div>
     </div>
     <div id="toast" class="toast">계산이 완료되었습니다</div>
-    <script src="/scientific.js"></script>
+    <script src="scientific.js"></script>
 </body>
 </html>
