--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>연락처</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap" rel="stylesheet">
     <style>
         body {
@@ -14,7 +14,8 @@
 </head>
 <body>
     <nav class="navbar">
-        <ul>
+        <div class="hamburger-menu" onclick="toggleMenu()">☰</div>
+        <ul class="navbar-menu">
             <li><a href="index.html">사칙연산 계산기</a></li>
             <li><a href="scientific.html">공학용 계산기</a></li>
             <li><a href="contact.html">연락처</a></li>
@@ -22,7 +23,13 @@
     </nav>
     <div class="container">
         <h1>おはよう</h1>
-        <img src="contact-image.jpg" alt="Contact Image" style="max-width: 100%; height: auto;">
+        <img src="images/contact-image.jpg" alt="Contact Image" style="max-width: 100%; height: auto;">
     </div>
+    <script>
+        function toggleMenu() {
+            const menu = document.querySelector('.navbar-menu');
+            menu.classList.toggle('active');
+        }
+    </script>
 </body>
 </html>
