--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>연락처</title>
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap" rel="stylesheet">
     <style>
         body {
@@ -23,7 +23,7 @@
     </nav>
     <div class="container">
         <h1>おはよう</h1>
-        <img src="images/contact-image.jpg" alt="Contact Image" style="max-width: 100%; height: auto;">
+        <img src="contact-image.jpg" alt="Contact Image" style="max-width: 100%; height: auto;">
     </div>
     <script>
         function toggleMenu() {
