--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>웹 계산기</title>
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap" rel="stylesheet">
     <style>
         body {
@@ -45,7 +45,7 @@
         </div>
     </div>
     <div id="toast" class="toast">계산이 완료되었습니다</div>
-    <script src="scripts/app.js"></script>
+    <script src="app.js"></script>
     <script>
         function toggleMenu() {
             const menu = document.querySelector('.navbar-menu');
