--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
         </ul>
     </nav>
     <div class="container">
-        <h1>おはよう</h1>
+        <h1>연락처</h1>
         <img src="contact-image.jpg" alt="Contact Image" style="max-width: 100%; height: auto;">
     </div>
     <script>
