--- a/scientific.html
+++ b/scientific.html
@@ -51,7 +51,7 @@
         </div>
     </div>
     <div id="toast" class="toast">계산이 완료되었습니다</div>
-    <script src="app.js"></script>
+    <script src="scientific.js"></script>
     <script>
         function toggleMenu() {
             const menu = document.querySelector('.navbar-menu');
